feat: sub_products adicionados no retorno